--- a/src/js/engagement_view/src/index.css
+++ b/src/js/engagement_view/src/index.css
@@ -1,19 +1,23 @@
-@import url('https://fonts.googleapis.com/css?family=Eczar|Roboto+Condensed&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Eczar|Roboto&display=swap");
 
 body {
-    margin: 0;
-    font-family: 'Roboto Condensed', sans-serif;
-    /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto", sans-serif;
+  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif; */
 
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    background-color:#303030;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: #252936;
 }
 
 code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
+* {
+  box-sizing: border-box;
+}
