--- a/src/js/engagement_view/src/LogIn.css
+++ b/src/js/engagement_view/src/LogIn.css
@@ -1,56 +1,80 @@
 /* Login Page */
 
-.backgroundImage{
-  width: 100vw;
-  height: 100vh;
-  background: url("./images/nodes.jpg");
+.loginContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  height: 80vh;
+
+  /* background: url("./images/nodes.jpg");
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
-  display: flex;
-  flex-direction: row;
+  background-size: cover; */
 }
 
-.grapl{
-  width: 30%; 
-  text-align: center;
+.grapl {
   color: white;
   text-transform: uppercase;
   font-weight: bold;
   font-size: 5rem;
-  margin: 3em 1em;
   font-family: "Arial";
+  margin-bottom: 0.75rem;
 }
 
-.formContainer{
-  margin-top: 8.5em;
-  margin-left: 8em;
-  width: 350px;
-  height: 350px;
-  background-color:white;
+.formContainer {
+  border-radius: 1em;
+  border: 1px solid #8c8c8c;
+  background-color: #151728;
   display: flex;
+  flex-direction: column;
   align-items: center;
   font-size: 1.25em;
-  box-shadow: 3px 5px 9px #888888;
+  box-shadow: 5px 5px 10px #111;
+  font-weight: bold;
+  padding: 1.5em 2em;
 }
 
-input{
-  border: 1px solid darkgrey;
-  width: 85%;
-  opacity: 1;
-  padding: .2em;
+.welcomeBanner {
+  margin-bottom: 0.5em;
+  text-transform: uppercase;
+  font-size: 0.8em;
+  letter-spacing: 4px;
+  color: #bdbdbd;
+}
+
+.loginText {
+  font-size: 1.2em;
+  margin-bottom: 1em;
+}
+
+.formElements {
+  display: flex;
+  flex-direction: column;
+  min-width: 350px;
+}
+
+.bottomMargin {
+  margin-bottom: 0.5em;
+}
+
+.formElements input {
+  margin: 0;
+}
+
+input,
+.submitBtn {
+  margin: 0.5em;
   font-size: 1em;
-} 
-
-input, 
-.submitBtn{
-  margin: .5em;
 }
 
-.submitBtn{
-  background-color: #26B4FF;
+.submitBtn {
+  background-color: #26b4ff;
   border: none;
-  padding: .25em;
+  border-radius: 1em;
+  font-weight: bold;
+  padding: 0.25em 2em;
   color: white;
   font-size: 1.15rem;
 }
@@ -59,8 +83,10 @@ input,
   .backgroundImage {
     flex-direction: column;
   }
-  .grapl{
-    margin: .5em;
+  .grapl {
+    margin: 0.5em;
   }
-  .formContainer{margin:.5em 2.5em;}
+  .formContainer {
+    margin: 0.5em 2.5em;
+  }
 }
