--- a/src/js/engagement_view/src/index.css
+++ b/src/js/engagement_view/src/index.css
@@ -1,12 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Eczar|Roboto+Condensed&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100&family=Source+Sans+Pro&display=swap');
 body {
     margin: 0;
-    font-family: 'Roboto Condensed', sans-serif;
-    /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif; */
-
+    font-family: 'Source Sans Pro', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     background-color:#303030;
