--- a/src/js/engagement_view/src/index.css
+++ b/src/js/engagement_view/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Eczar|Roboto+Condensed&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100&family=Source+Sans+Pro&display=swap');
 body {
     margin: 0;
